style: fix font on posts and about to be more readable

--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -5,8 +5,8 @@
 
   .about-img {
     width: 80%;
-
     margin: 0;
+    margin-top: -15%;
 
     @media (max-width: 360px - 1px) {
       padding: 20px;
@@ -14,8 +14,9 @@
   }
 
   .about-text {
-    max-width: 640px;
+    max-width: 800px;
     margin-top: -20% !important;
+    font-size: 1.25em;
 
     @media (max-width: 360px - 1px) {
       margin: 5px 0 !important;
