--- a/src/templates/post.scss
+++ b/src/templates/post.scss
@@ -54,6 +54,7 @@ $phone-status-bar-height: 24px - 12px;
 
         .post-body {
             max-width: 100%;
+            font-size: 1.25em;
 
             > h1,
             > h2,
